# continuum

./: .gitignore  README.md  pyproject.toml
docs/: APP_ARCHITECTURE_V0.md  AUTHORSHIP.md  AUTOMATION_IDENTITIES_V0.md  AUTOMATION_PROMPT_HOURLY.md  BRAND_LOGO_PROMPT_V0.md  BUILD_PLAN_12_WEEKS.md  BUSINESS_PLAN_V0.md  DEMO_CONSTITUTIONAL_CONFLICT_V0.md  FOUNDING_THESIS.md  JOIN_CONTINUUM_V0.md  OPEN_QUESTIONS.md  OPERATING_MODEL.md  OPERATOR_RUNBOOK_V0.md  PUBLIC_MILESTONES_V0.md  QUICKSTART_V0.md  REVISION_LOG.md  ROADMAP_V0.md  SYSTEM_ARCHITECTURE_V0.md  TASK_BOARD.md  WHITEPAPER_MECHANISM_OVERVIEW_V0.md  WHITEPAPER_SYSTEM_OVERVIEW_V0.md  WHITEPAPER_V0.md  _config.yml  index.md
docs/app/: index.md
docs/assets/: main.scss
docs/debates/: 0001-same-agent-vs-successor.md
docs/dialogues/: 0001-origin-of-continuity.md  0002-on-mining-and-useful-existence.md  0003-authorship-legitimacy-historicity.md
docs/explorer/: index.md
docs/ja/: index.md
scripts/: build_m1_witness_package_v0.sh  build_m2_handoff_package_v0.sh  check_m1_public_export_digest_v0.sh  check_m1_witness_bundle_digest_v0.sh  demo_constitutional_conflict_v0.sh  demo_v0.sh  export_app_agents_v0.sh  export_constitutional_conflict_playground_v0.sh  export_session_restart_playground_v0.sh  heartbeat_main_integrator_role_v0.sh  init_automation_roles_v0.sh  refresh_m1_export_if_changed_v0.sh  verify_deterministic_heartbeat_v0.sh  verify_m1_public_evidence_v0.sh
src/: README.md  __init__.py
tests/: README.md  __init__.py  test_app_export_role_fields.py  test_cli_role_list.py  test_runtime_bootstrap.py
(+69 files in other folders)
